# geo-annotator-assistant

./: .gitignore  AGENTS.md  LICENSE  README.md  audit.jsonl  bsAb.sh  bsAb.txt  capit.sh  fixed.jsonl  pyproject.toml  requirements.txt
config/: example_config.yaml  gat-llama3-3b-it-old_config.yaml  gat-llama3-3b-it-r4_config.yaml  gat-llama3-3b-it_config.yaml  gat-llama3-8b-it_config.yaml  gat-qwen3-14b-it_config.yaml  llama3-1b_config.yaml
docs/: README.md  RESUME.md  repo_structure.md  ui.md  whitepaper.md
docs/checkpoints/: 2026-01-02_checkpoint.md  2026-01-04_checkpoint.md  2026-01-05_checkpoint.md  2026-01-06_checkpoint.md  2026-01-07_checkpoint.md  2026-01-08_checkpoint.md  2026-01-09_checkpoint.md  2026-01-14_checkpoint.md  2026-01-26_checkpoint.md  2026-01-29_checkpoint.md  (+5 more)
prompts/: label_v1.txt  repair_cell_line_evidence_v1.txt  repair_data_type_from_context_v1.txt  repair_disease_evidence_v1.txt  repair_disease_from_context_v1.txt  repair_format_v1.txt  repair_ontology_guided_v1.txt  repair_tissue_anatomy_v1.txt
scripts/: artnet_output_stats.py
spec/: decision_table.yaml  heuristics.yaml
tests/: README.md  test_artnet_output_stats.py  test_cell_line_tie_breaker.py  test_cell_line_type_guard.py  test_chroma_client_cache.py  test_chroma_embedding_device_config.py  test_cli_and_batch.py  test_config_ingest_schema.py  test_config_llm_schema.py  test_config_postpass_schema.py  test_config_rag_schema.py  test_consistency_decision_routing.py  test_consistency_validator.py  test_context_fingerprint.py  test_decision_engine.py  test_disease_compound_healthy_placeholders.py  test_disease_generalization.py  test_disease_healthy_genotype_normalization.py  test_disease_healthy_normalization.py  test_disease_model_identifier_fallback.py  test_disease_ncit_trigger_configurable.py  test_disease_parenthetical_acronym.py  test_disease_sloppy_tumor_generalization.py  test_disease_token_equiv_matching.py  test_failure_codes_evidence_first.py  test_format_repair_extraction.py  test_format_unrepaired_local_fallback.py  test_format_validator.py  test_gse_consistency_postpass.py  test_gse_jsonl_path.py  test_gse_soft_ingest.py  test_healthy_disease_conflict.py  test_heuristics_loading.py  test_http_retry_policy.py  test_llm_cache_gse.py  test_llm_interface_stubbed.py  test_llm_non_answer_placeholders.py  test_llm_repair_loops.py  test_llm_reuse.py  test_llm_stop_trimming.py  (+32 more)
tickets/: ticket-11  ticket-16  ticket-2  ticket-3  ticket-5  ticket-6  ticket-7
(+314 files in other folders)
